Fix home examples being cut off

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -328,7 +328,7 @@ main .markup {
 		}
 	}
 
-	@media (max-width: 840px) {
+	@media (max-width: 900px) {
 		max-width: 600px;
 		margin: auto;
 
